# rainmeter-remote-simple-metric-server

./: Cargo.toml  LICENSE  README.md
.doc/: README_ZH.md  format-test.js  rainmeter-skin.ini
.github/workflows/: release.yml
src/: main.rs
